--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "lint-staged": {
         "linters": {
             "*.{ts,tsx}": [
-                "tsc --noEmit --showConfig"
-            ],
-            ".gitlab-ci.yml": [
-                "yarn lint-gl"
+                "tsc --noEmit"
             ]
         },
         "relative": true
