--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "exec": "node ./dist/",
         "format": "yarn lint --fix",
         "lint": "tslint -c tslint.json 'src/**/*.ts'",
-        "prepare": "yarn build",
+        "prepare": "yarn build && node ./bin/make-it-executable.js",
         "typecheck": "bash bin/typecheck.sh",
         "watch": "tsc -w"
     },
