Add tests platform

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
