--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "LICENSE"
   ],
   "scripts": {
+    "prebuild": "rm -rf ./dist/",
     "build": "tsc",
     "exec": "node ./dist/",
     "format": "yarn lint --fix",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepare": "yarn build && node ./bin/make-it-executable.js",
+    "pretest": "rm -rf ./dist/",
+    "test": "jest",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
   },
@@ -47,13 +50,19 @@
     "request-promise-native": "1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-typescript": "7.3.3",
     "@types/chalk": "2.2.0",
     "@types/glob": "7.1.1",
+    "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "@types/rc": "1.1.0",
     "@types/request": "2.48.1",
     "@types/request-promise-native": "1.0.16",
+    "babel-jest": "24.8.0",
     "husky": "2.6.0",
+    "jest": "24.8.0",
     "lint-staged": "8.2.1",
     "tslint": "5.18.0",
     "typescript": "3.5.2"
