--- a/package.json
+++ b/package.json
@@ -42,13 +42,17 @@
   "dependencies": {
     "chalk": "2.4.2",
     "commander": "2.20.0",
-    "glob": "7.1.4"
+    "glob": "7.1.4",
+    "request": "2.88.0",
+    "request-promise-native": "1.0.7"
   },
   "devDependencies": {
     "@types/chalk": "2.2.0",
     "@types/commander": "2.12.2",
     "@types/glob": "7.1.1",
     "@types/node": "12.0.10",
+    "@types/request": "2.48.1",
+    "@types/request-promise-native": "1.0.16",
     "husky": "2.6.0",
     "lint-staged": "8.2.1",
     "tslint": "5.18.0",
