Support Array.flat()

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
       ]
     },
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": [
+      "es2019"
+    ]
   },
   "include": [
     "src/**/*"
