--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
   },
   "dependencies": {
     "chalk": "2.4.2",
-    "commander": "2.20.0",
     "glob": "7.1.4",
+    "rc": "1.2.8",
     "request": "2.88.0",
     "request-promise-native": "1.0.7"
   },
   "devDependencies": {
     "@types/chalk": "2.2.0",
-    "@types/commander": "2.12.2",
     "@types/glob": "7.1.1",
     "@types/node": "12.0.10",
+    "@types/rc": "1.1.0",
     "@types/request": "2.48.1",
     "@types/request-promise-native": "1.0.16",
     "husky": "2.6.0",
