--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "build": "tsc",
     "exec": "node ./dist/",
     "format": "yarn lint --fix",
+    "format-tests": "yarn lint-tests --fix",
     "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint-tests": "tslint -p tsconfig.test.json -c tslint.json tests/**/*.ts",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
@@ -31,9 +33,14 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{ts,tsx}": [
+      "src/**/*.{ts,tsx}": [
         "yarn typecheck",
         "yarn format",
+        "git add"
+      ],
+      "tests/**/*.{ts,tsx}": [
+        "yarn typecheck",
+        "yarn format-tests",
         "git add"
       ]
     },
@@ -49,13 +56,16 @@
   "devDependencies": {
     "@types/chalk": "2.2.0",
     "@types/glob": "7.1.1",
+    "@types/jest": "^25.1.3",
     "@types/node": "12.0.10",
     "@types/rc": "1.1.0",
     "@types/request": "2.48.1",
     "@types/request-promise-native": "1.0.16",
     "husky": "2.6.0",
+    "jest": "^25.1.0",
     "lint-staged": "8.2.1",
+    "ts-jest": "^25.2.1",
     "tslint": "5.18.0",
-    "typescript": "3.5.2"
+    "typescript": "^3.7.5"
   }
 }
