--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "chalk": "2.4.2",
+    "clipanion": "^2.2.2",
     "glob": "7.1.4",
     "rc": "1.2.8",
     "request": "2.88.0",
