--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "datadog-ci",
-  "version": "0.1.1",
+  "name": "@datadog/datadog-ci",
+  "version": "0.2.0",
   "description": "Run datadog actions from the CI.",
   "main": "dist/index.js",
-  "repository": "git@github.com:DataDog/datadog-ci.git",
+  "repository": "https://github.com/DataDog/datadog-ci",
   "author": "Yoann Moinet <yoann.moinet@datadoghq.com>",
   "license": "Apache-2.0",
-  "private": true,
+  "private": false,
   "bin": {
     "datadog-ci": "dist/index.js"
   },
