--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "check-licenses": "node bin/check-licenses.js",
     "exec": "node ./dist/",
     "format": "yarn lint --fix",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -56,7 +57,6 @@
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
-    "@types/rc": "1.1.0",
     "@types/request": "2.48.1",
     "@types/request-promise-native": "1.0.16",
     "husky": "2.6.0",
