--- a/package.json
+++ b/package.json
@@ -40,12 +40,11 @@
     "relative": true
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "chalk": "2.4.2",
     "clipanion": "^2.2.2",
     "deep-extend": "^0.6.0",
-    "glob": "7.1.4",
-    "request": "2.88.0",
-    "request-promise-native": "1.0.7"
+    "glob": "7.1.4"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
@@ -56,9 +55,6 @@
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
-    "@types/rc": "1.1.0",
-    "@types/request": "2.48.1",
-    "@types/request-promise-native": "1.0.16",
     "husky": "2.6.0",
     "jest": "24.8.0",
     "lint-staged": "8.2.1",
