--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "build": "tsc",
     "check-licenses": "node bin/check-licenses.js",
-    "exec": "node ./dist/",
     "format": "yarn lint --fix",
+    "launch": "ts-node ./src/index.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "test": "jest",
@@ -60,6 +60,7 @@
     "jest": "24.8.0",
     "lint-staged": "8.2.1",
     "ts-jest": "24.3.0",
+    "ts-node": "^8.8.1",
     "tslint": "5.18.0",
     "typescript": "3.7.5"
   }
