--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,33 @@ jobs:
     - run: yarn install
     - run: yarn build
     - run: yarn test
+    - run: mkdir artifacts
+    - run: yarn pack --filename artifacts/datadog-ci.tgz
+    - run: cp -r .github/workflows/e2e artifacts/
+    - uses: actions/upload-artifact@v1
+      with:
+        name: artifacts
+        path: artifacts/
+  
+  e2e-test:
+    name: End-to-end test the package
+    runs-on: ubuntu-latest
+    needs: build-and-test
+
+    steps:
+    - name: Install node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.16.1'
+    - uses: actions/download-artifact@v1
+      with:
+        name: artifacts
+    - run: yarn add ./artifacts/datadog-ci.tgz
+    - name: Run synthetics test
+      run: yarn datadog-ci synthetics run-tests --config artifacts/e2e/global.config.json
+      env:
+        DATADOG_API_KEY: ${{ secrets.datadog_api_key }}
+        DATADOG_APP_KEY: ${{ secrets.datadog_app_key }}
 
   check-licenses:
     name: Check licenses
