--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc",
     "check-licenses": "node bin/check-licenses.js",
     "format": "yarn lint --fix",
-    "launch": "ts-node ./src/index.ts",
+    "launch": "ts-node -p .",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "test": "jest",
@@ -41,10 +41,10 @@
     "relative": true
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "0.19.2",
     "chalk": "2.4.2",
-    "clipanion": "^2.2.2",
-    "deep-extend": "^0.6.0",
+    "clipanion": "2.2.2",
+    "deep-extend": "0.6.0",
     "glob": "7.1.4"
   },
   "devDependencies": {
@@ -52,7 +52,7 @@
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
     "@types/chalk": "2.2.0",
-    "@types/deep-extend": "^0.4.31",
+    "@types/deep-extend": "0.4.31",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
@@ -60,7 +60,7 @@
     "jest": "24.8.0",
     "lint-staged": "8.2.1",
     "ts-jest": "24.3.0",
-    "ts-node": "^8.8.1",
+    "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "typescript": "3.7.5"
   }
