Add clean command

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsc",
+    "build": "yarn clean; tsc",
     "check-licenses": "node bin/check-licenses.js",
+    "clean": "rm -rf dist/*",
     "format": "yarn lint --fix",
     "launch": "ts-node src/index.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
