[synthetics] add launch from search option

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "check-licenses": "node bin/check-licenses.js",
     "clean": "rm -rf dist/*",
     "format": "yarn lint --fix",
-    "launch": "ts-node src/index.ts",
+    "launch": "ts-node --transpile-only src/index.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "test": "jest",
