--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "deep-extend": "0.6.0",
-    "glob": "7.1.4"
+    "glob": "7.1.4",
+    "proxy-agent": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
