--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "clipanion": "2.2.2",
     "deep-extend": "0.6.0",
     "glob": "7.1.4",
-    "proxy-agent": "^3.1.1"
+    "proxy-agent": "3.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
