--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@types/jest": "24.0.15",
     "@types/node": "12.0.10",
     "jest": "24.8.0",
-    "prettier": "^2.0.5",
+    "prettier": "2.0.5",
     "ts-jest": "24.3.0",
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
-    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "3.7.5"
   }
 }
