--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "deep-extend": "0.6.0",
+    "form-data": "^3.0.0",
     "glob": "7.1.4",
     "proxy-agent": "3.1.1"
   },
@@ -50,6 +51,6 @@
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.7.5"
+    "typescript": "3.9.3"
   }
 }
