--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@types/tiny-async-pool": "^1.0.0",
     "axios": "0.19.2",
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
