--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@types/async-retry": "^1.4.2",
+    "@types/datadog-metrics": "^0.6.0",
     "@types/tiny-async-pool": "^1.0.0",
+    "async-retry": "^1.3.1",
     "axios": "0.19.2",
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
+    "datadog-metrics": "https://github.com/fermelone/node-datadog-metrics",
     "deep-extend": "0.6.0",
     "form-data": "^3.0.0",
     "glob": "7.1.4",
@@ -53,6 +57,6 @@
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.9.3"
+    "typescript": "3.7.5"
   }
 }
