--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@types/async-retry": "^1.4.2",
-    "@types/datadog-metrics": "^0.6.0",
-    "@types/tiny-async-pool": "^1.0.0",
+    "@types/async-retry": "1.4.2",
+    "@types/datadog-metrics": "0.6.0",
+    "@types/tiny-async-pool": "1.0.0",
     "async-retry": "^1.3.1",
     "axios": "0.19.2",
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "datadog-metrics": "https://github.com/fermelone/node-datadog-metrics",
     "deep-extend": "0.6.0",
-    "form-data": "^3.0.0",
+    "form-data": "3.0.0",
     "glob": "7.1.4",
     "proxy-agent": "3.1.1",
     "tiny-async-pool": "^1.1.0"
