--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "launch": "ts-node --transpile-only src/index.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
-    "prettier-check": "prettier --check \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore || echo \"\nYou can fix this by running ==> yarn prettier-write <==\n\"",
+    "prettier-check": "prettier --check \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore || (echo \"\nYou can fix this by running ==> yarn prettier-write <==\n\" && false)",
     "prettier-write": "prettier --write \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
     "test": "jest",
     "typecheck": "bash bin/typecheck.sh",
