--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "esModuleInterop": true,
     "lib": [
       "es2019"
-    ]
+    ],
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*"
