--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "datadog-metrics": "https://github.com/DataDog/node-datadog-metrics#12d16a80ea2a8846c91d80f5e127fb7b81b9f347",
-    "dd-trace": "^0.27.0",
+    "dd-trace": "0.27.0",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
