[CI-APP][CIAPP-240] Trace Command (#86)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean": "rm -rf dist/*",
     "format": "yarn lint --fix",
     "launch": "ts-node --transpile-only src/index.ts",
+    "launch:debug": "node -r ts-node/register/transpile-only --inspect-brk src/index.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "prettier-check": "prettier --check \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore || (echo \"\nYou can fix this by running ==> yarn prettier-write <==\n\" && false)",
@@ -37,6 +38,7 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "datadog-metrics": "https://github.com/DataDog/node-datadog-metrics#12d16a80ea2a8846c91d80f5e127fb7b81b9f347",
+    "dd-trace": "0.27.0",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
