--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-# This workflow will do a clean install of node dependencies.json, build the source code and run tests
+# This workflow will do a clean install of node dependencies, build the source code and run tests
 
 name: Continuous Integration
 
