--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,11 @@ jobs:
         env:
           DATADOG_API_KEY: ${{ secrets.datadog_api_key }}
           DATADOG_APP_KEY: ${{ secrets.datadog_app_key }}
+      - name: Run sourcemaps upload test
+        run: yarn datadog-ci sourcemaps upload artifacts/e2e/sourcemaps/ --release-version=e2e --service=e2e-tests --minified-path-prefix=https://e2e-tests.datadoghq.com/static/
+        env:
+          DATADOG_API_KEY: ${{ secrets.datadog_api_key }}
+          DATADOG_APP_KEY: ${{ secrets.datadog_app_key }}
 
   check-licenses:
     name: Check licenses
