--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier-check": "prettier --check \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore || (echo \"\nYou can fix this by running ==> yarn prettier-write <==\n\" && false)",
     "prettier-write": "prettier --write \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
     "test": "jest",
+    "test:debug": "node --inspect-brk `which jest`",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
   },
@@ -42,7 +43,7 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "datadog-metrics": "https://github.com/DataDog/node-datadog-metrics#12d16a80ea2a8846c91d80f5e127fb7b81b9f347",
-    "dd-trace": "0.27.0",
+    "dd-trace": "git+https://github.com/DataDog/dd-trace-js#a07b82c81fd894c1230e5cab75fa92e8f35c5ad6",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
@@ -62,6 +63,7 @@
     "@types/node": "12.0.10",
     "@types/tiny-async-pool": "1.0.0",
     "jest": "26.6.3",
+    "jest-circus": "26.6.3",
     "prettier": "2.0.5",
     "ts-jest": "26.4.4",
     "ts-node": "8.8.1",
