--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         image: datadog/agent
         env:
           DD_API_KEY: ${{ secrets.DATADOG_API_KEY_ORG_2 }}
-          DD_ENV: testing-juan
+          DD_ENV: ci
           DD_APM_ENABLED: true
           DD_APM_NON_LOCAL_TRAFFIC: true
           DD_APM_MAX_TPS: 0
