--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "form-data": "3.0.0",
     "glob": "7.1.4",
     "proxy-agent": "3.1.1",
-    "simple-git": "^2.31.0",
+    "simple-git": "2.31.0",
     "tiny-async-pool": "1.1.0"
   },
   "devDependencies": {
