--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/tiny-async-pool": "1.0.0",
     "jest": "26.6.3",
     "jest-circus": "26.6.3",
+    "jest-environment-node": "26.6.2",
     "prettier": "2.0.5",
     "ts-jest": "26.4.4",
     "ts-node": "8.8.1",
