try other version

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "chalk": "2.4.2",
     "clipanion": "2.2.2",
     "datadog-metrics": "https://github.com/DataDog/node-datadog-metrics#12d16a80ea2a8846c91d80f5e127fb7b81b9f347",
-    "dd-trace": "0.29.2",
+    "dd-trace": "git+https://github.com/DataDog/dd-trace-js#a07b82c81fd894c1230e5cab75fa92e8f35c5ad6",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
