--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,25 @@
 
 name: Continuous Integration
 
-on: pull_request
+on: push
 
 jobs:
   build-and-test:
     name: Build and test
     runs-on: ubuntu-latest
+    services:
+      agent:
+        image: datadog/agent
+        env:
+          DD_API_KEY: ${{ secrets.DATADOG_API_KEY_MAIN_ACCOUNT }}
+          DD_ENV: ci
+          DD_APM_ENABLED: true
+          DD_APM_NON_LOCAL_TRAFFIC: true
+          DD_APM_MAX_TPS: 0
+          DD_APM_MAX_EPS: 0
+          DD_INSIDE_CI: true
+        ports:
+          - 8126:8126
 
     steps:
       - uses: actions/checkout@v2
@@ -20,6 +33,8 @@ jobs:
       - run: yarn prettier-check
       - run: yarn lint
       - run: yarn test
+        env:
+          DD_SERVICE: datadog-ci-tests
       - run: mkdir artifacts
       - run: yarn pack --filename artifacts/datadog-ci.tgz
       - run: cp -r .github/workflows/e2e artifacts/
