--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 name: Publish package on NPM
 on:
   release:
-    types: [published]
+    types: [released]
 jobs:
   build:
     runs-on: ubuntu-latest
