Update prerelease github workflow

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -10,7 +10,15 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: echo $GITHUB_REF
+      - run: |
+          # Isolate the tag and exit if none found
+          IFS='-' read -ra ARR_TAG <<< $TAG
+          if ((${#ARR_TAG[@]} <= 1)); then echo "Missing channel in given tag '$TAG'. Should be in the format '0.0.0-channel'" && exit 1; fi
+          TAG_TO_PUBLISH=${ARR_TAG[${#ARR_TAG[@]} - 1]}
+
+          # Publish on npm in the correct channel
+          echo "Publishing on $TAG_TO_PUBLISH channel."
+          yarn publish --tag=$TAG_TO_PUBLISH
         env:
           NPM_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
-          TAG: ${{github.event.release.tag_name}}
+          TAG: ${{ github.event.release.tag_name }}
