--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: yarn install
+      - run: yarn install --immutable
       - run: yarn build
       - run: yarn prettier-check
       - run: yarn lint
