--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       - run: yarn lint
       - run: yarn test
         env:
+          CI: true
           DD_SERVICE: datadog-ci-tests
       - run: mkdir artifacts
       - run: yarn pack --filename artifacts/datadog-ci.tgz
