--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "async-retry": "1.3.1",
     "aws-sdk": "2.682.0",
     "axios": "0.21.1",
-    "chalk": "2.4.2",
+    "chalk": "^3.0.0",
     "clipanion": "2.2.2",
     "datadog-metrics": "0.9.0",
     "dd-trace": "0.31.0",
@@ -48,20 +48,28 @@
     "form-data": "3.0.0",
     "glob": "7.1.4",
     "proxy-agent": "3.1.1",
-    "tiny-async-pool": "1.1.0"
+    "ssh2": "0.8.9",
+    "ssh2-streams": "0.4.10",
+    "sshpk": "1.16.1",
+    "tiny-async-pool": "1.1.0",
+    "ws": "7.4.0",
+    "yamux-js": "0.0.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-typescript": "7.3.3",
     "@types/async-retry": "1.4.2",
-    "@types/chalk": "2.2.0",
     "@types/datadog-metrics": "0.6.0",
     "@types/deep-extend": "0.4.31",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
-    "@types/node": "12.0.10",
+    "@types/node": "12.20.3",
+    "@types/ssh2": "0.5.45",
+    "@types/ssh2-streams": "0.1.7",
+    "@types/sshpk": "1.10.5",
     "@types/tiny-async-pool": "1.0.0",
+    "@types/ws": "7.2.9",
     "jest": "26.6.3",
     "jest-circus": "26.6.3",
     "jest-environment-node": "26.6.2",
