--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "async-retry": "1.3.1",
     "aws-sdk": "2.682.0",
     "axios": "0.21.1",
-    "chalk": "^3.0.0",
+    "chalk": "3.0.0",
     "clipanion": "2.2.2",
     "datadog-metrics": "0.9.0",
     "dd-trace": "0.31.0",
