[synthetics] bump yamux-js to working branch

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "sshpk": "1.16.1",
     "tiny-async-pool": "1.1.0",
     "ws": "7.4.0",
-    "yamux-js": "0.0.4"
+    "yamux-js": "https://github.com/m-rousse/yamux-js#mrousse/track-window-size"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
