Add engine info to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "bin": {
     "datadog-ci": "dist/index.js"
   },
+  "engines": {
+    "node": ">=10.*"
+  },
   "files": [
     "dist/**/*",
     "README",
