Target latest Node 10 version

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "datadog-ci": "dist/index.js"
   },
   "engines": {
-    "node": ">=10.*"
+    "node": ">=10.24.1"
   },
   "files": [
     "dist/**/*",
