[ci-app] add more CIs and improve tests

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "prettier-check": "prettier --check \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore || (echo \"\nYou can fix this by running ==> yarn prettier-write <==\n\" && false)",
     "prettier-write": "prettier --write \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
     "test": "jest",
-    "test:debug": "node --inspect-brk `which jest`",
+    "test:debug": "node --inspect-brk `which jest` --runInBand",
     "typecheck": "bash bin/typecheck.sh",
     "watch": "tsc -w"
   },
