--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,3 +5,4 @@ src/commands/synthetics  @m-rousse @DataDog/synthetics-worker
 src/commands/lambda @DataDog/serverless
 src/commands/sourcemaps/ @DataDog/source-code-integration
 *.md @DataDog/documentation
+src/commands/junit @DataDog/ci-app-tracers
