--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
+    "tslint-lines-between-class-members": "^1.3.6",
     "typescript": "4.1.3"
   }
 }
