--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "dependencies": {
     "async-retry": "1.3.1",
-    "aws-sdk": "2.682.0",
+    "aws-sdk": "2.903.0",
     "axios": "0.21.1",
     "chalk": "3.0.0",
     "clipanion": "2.2.2",
-    "datadog-metrics": "0.9.0",
-    "dd-trace": "0.32.0",
+    "datadog-metrics": "0.9.3",
+    "dd-trace": "0.32.2",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
@@ -79,7 +79,7 @@
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
-    "tslint-lines-between-class-members": "^1.3.6",
+    "tslint-lines-between-class-members": "1.3.6",
     "typescript": "4.1.3"
   }
 }
