--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@datadog/datadog-ci",
-  "version": "0.12.2-alpha",
+  "version": "0.12.3-alpha",
   "description": "Run datadog actions from the CI.",
   "main": "dist/index.js",
   "repository": "https://github.com/DataDog/datadog-ci",
   "license": "Apache-2.0",
   "bin": {
     "datadog-ci": "dist/index.js"
+  },
+  "engines": {
+    "node": ">=10.24.1"
   },
   "files": [
     "dist/**/*",
@@ -38,16 +41,16 @@
   },
   "dependencies": {
     "async-retry": "1.3.1",
-    "aws-sdk": "2.682.0",
+    "aws-sdk": "2.903.0",
     "axios": "0.21.1",
     "chalk": "3.0.0",
     "clipanion": "2.2.2",
-    "datadog-metrics": "0.9.2",
-    "dd-trace": "0.32.0",
+    "datadog-metrics": "0.9.3",
+    "dd-trace": "0.32.2",
     "deep-extend": "0.6.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
-    "proxy-agent": "3.1.1",
+    "proxy-agent": "4.0.1",
     "simple-git": "2.31.0",
     "ssh2": "0.8.9",
     "ssh2-streams": "0.4.10",
@@ -65,7 +68,7 @@
     "@types/deep-extend": "0.4.31",
     "@types/glob": "7.1.1",
     "@types/jest": "24.0.15",
-    "@types/node": "12.20.3",
+    "@types/node": "10.17.57",
     "@types/ssh2": "0.5.45",
     "@types/ssh2-streams": "0.1.7",
     "@types/sshpk": "1.10.5",
@@ -79,7 +82,7 @@
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
-    "tslint-lines-between-class-members": "^1.3.6",
+    "tslint-lines-between-class-members": "1.3.6",
     "typescript": "4.1.3"
   }
 }
