--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sshpk": "1.16.1",
     "tiny-async-pool": "1.2.0",
     "ws": "7.4.6",
+    "xml2js": "0.4.23",
     "yamux-js": "0.1.0"
   },
   "devDependencies": {
@@ -74,6 +75,7 @@
     "@types/ssh2-streams": "0.1.8",
     "@types/sshpk": "1.10.5",
     "@types/tiny-async-pool": "1.0.0",
+    "@types/xml2js": "0.4.8",
     "@types/ws": "7.2.9",
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
