Add tests for getRequestBuilder proxy behavior.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "lib": ["es2019"],
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*",
+    "proxy.d.ts"
+  ]
 }
