--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "prettier": "2.0.5",
-    "proxy": "^1.0.2",
+    "proxy": "1.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
