--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datadog/datadog-ci",
-  "version": "0.16.3-alpha",
+  "version": "0.17.0-alpha",
   "description": "Run datadog actions from the CI.",
   "main": "dist/index.js",
   "repository": "https://github.com/DataDog/datadog-ci",
@@ -78,6 +78,7 @@
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "prettier": "2.0.5",
+    "proxy": "^1.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "8.8.1",
     "tslint": "5.18.0",
