--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 * @yoannmoinet @m-rousse
 
-src/commands  @m-rousse
+src/commands
 src/commands/synthetics  @m-rousse @DataDog/synthetics-worker
 src/commands/lambda @DataDog/serverless
 src/commands/sourcemaps/ @DataDog/source-code-integration
