--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "declaration" : true,
     "sourceMap": false,
     "outDir": "dist",
     "rootDir": "src",
