--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/ws": "7.2.9",
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
+    "jest-matcher-specific-error": "^1.0.0",
     "prettier": "2.0.5",
     "proxy": "1.0.2",
     "ts-jest": "27.0.3",
