--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@types/xml2js": "0.4.9",
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
-    "jest-matcher-specific-error": "^1.0.0",
+    "jest-matcher-specific-error": "1.0.0",
     "prettier": "2.0.5",
     "proxy": "1.0.2",
     "ts-jest": "27.0.3",
