--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "dist/main.js",
   "resolutions": {
     "ini": "1.3.7",
     "kind-of@^6.0.0": "6.0.3"
