add test command

--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -20,5 +20,7 @@ jobs:
         run: yarn build
       - name: Run create binary
         run: yarn dist-standalone
+      - name: Test binary
+        run: ./datadog-ci-linux help
       # - name: Run distribute
       #   run: yarn distribute
