--- a/.github/workflows/binary.yml
+++ b/.github/workflows/binary.yml
@@ -1,10 +1,8 @@
 name: Generate binary and distribute it
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - juan-fernandez/hackathon-bundle
+  release:
+    types: [prereleased]
 
 jobs:
   generate-binary-and-distribute:
@@ -20,15 +18,17 @@ jobs:
         run: yarn build
       - name: Run create binary
         run: yarn dist-standalone
-      # - name: Test binary
-      #   run: ./datadog-ci-linux help
-      - name: Upload to draft release
-        uses: softprops/action-gh-release@v1
-        # if: startsWith(github.ref, 'refs/tags/')
+      - name: Test binary
+        run: ./datadog-ci-linux version
+      - name: Upload linux to release
+        uses: JasonEtco/upload-to-release@master
         with:
-          draft: true
-          files: |
-            ./datadog-ci-linux
-            ./datadog-ci-macos
-            ./datadog-ci-win.exe
-          fail_on_unmatched_files: true
+          args: ./datadog-ci-linux
+      - name: Upload macos to release
+        uses: JasonEtco/upload-to-release@master
+        with:
+          args: ./datadog-ci-macos
+      - name: Upload windows to release
+        uses: JasonEtco/upload-to-release@master
+        with:
+          args: ./datadog-ci-win.exe
