--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "chalk": "3.0.0",
     "clipanion": "2.2.2",
     "datadog-metrics": "0.9.3",
-    "dd-trace": "0.35.1-beta.1",
     "deep-extend": "0.6.0",
     "fast-xml-parser": "3.19.0",
     "form-data": "3.0.0",
@@ -77,6 +76,7 @@
     "@types/tiny-async-pool": "1.0.0",
     "@types/ws": "7.2.9",
     "@types/xml2js": "0.4.9",
+    "dd-trace": "0.36.3",
     "jest": "27.0.5",
     "jest-environment-node": "27.0.5",
     "jest-matcher-specific-error": "1.0.0",
