--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/datadog-metrics": "0.6.1",
     "@types/deep-extend": "0.4.31",
     "@types/glob": "7.1.1",
+    "@types/inquirer": "^8.1.3",
     "@types/jest": "24.0.15",
     "@types/node": "10.17.57",
     "@types/ssh2": "0.5.46",
