--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "fast-xml-parser": "3.19.0",
     "form-data": "3.0.0",
     "glob": "7.1.4",
-    "inquirer": "^8.2.0",
+    "inquirer": "8.2.0",
     "proxy-agent": "5.0.0",
     "simple-git": "2.31.0",
     "ssh2": "1.4.0",
@@ -69,7 +69,7 @@
     "@types/datadog-metrics": "0.6.1",
     "@types/deep-extend": "0.4.31",
     "@types/glob": "7.1.1",
-    "@types/inquirer": "^8.1.3",
+    "@types/inquirer": "8.1.3",
     "@types/jest": "24.0.15",
     "@types/node": "10.17.57",
     "@types/ssh2": "0.5.46",
@@ -89,6 +89,6 @@
     "tslint": "5.18.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-lines-between-class-members": "1.3.6",
-    "typescript": "4.1.3"
+    "typescript": "4.2.2"
   }
 }
