[scripts] fix launch command

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "check-licenses": "node bin/check-licenses.js",
     "clean": "rm -rf dist/*",
     "format": "yarn tslint --fix && yarn prettier --write",
-    "launch": "ts-node --transpile-only src/index.ts",
-    "launch:debug": "node -r ts-node/register/transpile-only --inspect-brk src/index.ts",
+    "launch": "ts-node --transpile-only src/cli.ts",
+    "launch:debug": "node -r ts-node/register/transpile-only --inspect-brk src/cli.ts",
     "lint": "(yarn tslint && yarn prettier --check) || (echo \"\nYou can fix this by running ==> yarn format <==\n\" && false)",
     "prepack": "yarn build && node ./bin/make-it-executable.js",
     "prettier": "prettier \"src/**/*.{ts,js,json,yml}\" --ignore-path .gitignore",
