--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "yarn clean; tsc",
     "check-licenses": "node bin/check-licenses.js",
     "clean": "rm -rf dist/*",
-    "dist-standalone": "nexe --build .",
+    "dist-standalone": "nexe --build -i './dist/cli.js' --name datadog-ci",
+    "dist-standalone:test": "node bin/test-standalone-binary.js",
     "format": "yarn tslint --fix && yarn prettier --write",
     "launch": "ts-node --transpile-only src/cli.ts",
     "launch:debug": "node -r ts-node/register/transpile-only --inspect-brk src/cli.ts",
