--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install node
         uses: actions/setup-node@v1
+        with:
+          node-version: '10.24.1'
       - name: Install project dependencies
         run: yarn install --immutable
       - name: Bundle library
