--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,13 +71,13 @@ jobs:
   standalone-binary-test:
     name: Test standalone binary
     runs-on: ubuntu-latest
-    needs: build-and-test
     steps:
       - uses: actions/checkout@v2
       - name: Install node
         uses: actions/setup-node@v1
         with:
           node-version: '10.24.1'
+      - run: npm config set python python2.7
       - run: yarn install --immutable
       - run: yarn build
       - name: Bundle standalone binary
