--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,8 @@ jobs:
         run: yarn install --immutable
       - name: Bundle library
         run: yarn build
-      - name: Create standalone binary
-        run: yarn dist-standalone -t node14-linux-x64 -o datadog-ci-linux-x64
+      - name: Create standalone binaries for linux, windows and macOS
+        run: yarn dist-standalone -t node14-linux-x64,node14-win-x64,node14-macos-x64
       - name: Remove dist folder to check that binary can stand alone
         run: |
           rm -rf dist
@@ -39,4 +39,4 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./datadog-ci-linux-x64
+          asset_path: ./datadog-ci-*
