--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,20 +15,20 @@ jobs:
         env:
           NPM_AUTH_TOKEN: ${{ secrets.YARN_NPM_AUTH_TOKEN }}
 
-  build-binary:
+  build-binary-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install node
         uses: actions/setup-node@v1
         with:
-          node-version: '10.24.1'
+          node-version: '14.18.3'
       - name: Install project dependencies
         run: yarn install --immutable
       - name: Bundle library
         run: yarn build
-      - name: Create standalone binaries for linux, windows and macOS
-        run: yarn dist-standalone -t node14-linux-x64,node14-win-x64,node14-macos-x64
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-linux-x64 -o datadog-ci-linux
       - name: Remove dist folder to check that binary can stand alone
         run: |
           rm -rf dist
@@ -39,4 +39,56 @@ jobs:
         uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./datadog-ci-*
+          asset_path: ./datadog-ci-linux
+
+  build-binary-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.18.3'
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build:win
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-win-x64 -o datadog-ci-windows
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm dist -r
+          rm src -r
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+      - name: Upload binaries to GitHub release
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./datadog-ci-windows
+
+  build-binary-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.18.3'
+      - name: Install project dependencies
+        run: yarn install --immutable
+      - name: Bundle library
+        run: yarn build
+      - name: Create standalone binary
+        run: yarn dist-standalone -t node14-macos-x64 -o datadog-ci-macos
+      - name: Remove dist folder to check that binary can stand alone
+        run: |
+          rm dist -r
+          rm src -r
+      - name: Test generated standalone binary
+        run: yarn dist-standalone:test
+      - name: Upload binaries to GitHub release
+        uses: shogo82148/actions-upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./datadog-ci-macos
