add new typeroot in tsconfig, get rid of @tsignore by using require, add type file (d.ts) for inquirer-checkbox-plus-prompt, and narrow down any types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
+    "typeRoots": ["./node_modules/@types/", "./src/types"],
     "module": "commonjs",
     "declaration" : true,
     "sourceMap": false,
